Órai feladat 2021.07.26. Óra végi állapot