@@ -1,9 +1,11 @@
 package com.training360.moviesjpa;
 
+import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import javax.persistence.SecondaryTable;
+import javax.transaction.Transactional;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -12,11 +14,12 @@ import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 
 @Service
+@AllArgsConstructor
 public class MovieService {
 
     private ModelMapper modelMapper;
 
-    private AtomicLong idGenerator = new AtomicLong();
+//    private AtomicLong idGenerator = new AtomicLong();
 
     private MoviesRepository repository;
 
@@ -29,37 +32,24 @@ public class MovieService {
     public List<MovieDto> movieList() {
         return repository.findAll().stream()
                 .map(movie -> modelMapper.map(movie, MovieDto.class))
-                .collect(Collectors.toList());
-    }
-
-    private Movie getMovieById(Long id) {
-        return modelMapper.map()
-    }
-
-    public MovieDto findMovieById(Long id) {
-        return modelMapper.map(getMovieById(id), MovieDto.class);
+                .toList();
     }
 
 
     public MovieDto createMovie(CreateMovieCommand command) {
-        Movie movie = new Movie(idGenerator.incrementAndGet(), command.getTitle());
-        movies.add(movie);
+        Movie movie = new Movie(command.getTitle());
+        repository.save(movie);
         return modelMapper.map(movie, MovieDto.class);
     }
 
+    @Transactional
     public MovieDto addRating(Long id, NewMovieRatingCommand command) {
-        Movie movie = getMovieById(id);
+        Movie movie = repository.findById(id).orElseThrow(() -> new IllegalArgumentException("Cannot find movie by id: " + id));
         movie.addRating(command.getRating());
         return modelMapper.map(movie, MovieDto.class);
     }
 
-    public void deleteMovie(Long id) {
-        Movie movie = getMovieById(id);
-        movies.remove(movie);
-    }
-
     public void deleteAllMovies() {
-        idGenerator = new AtomicLong();
-        movies.clear();
+        repository.deleteAll();
     }
 }
